2008-12-10  Brian Cameron  <brian.cameron@sun.com>

	* configure.in, www.gnome.org/projects/gdm/docs.html
	  www.gnome.org/projects/gdm/Makefile.am,
	  www.gnome.org/projects/gdm/docs: Remove docs.
	* www.gnome.org/projects/gdm/*.html: Now point to docs at
	  http://library.gnome.org/admin/gdm/.

2008-12-10  Brian Cameron  <brian.cameron@sun.com>

	* www.gnome.org/projects/gdm/*.html: Updated to reference
	  2.24 as the latest stable release and 2.25 as the latest
	  unstable release.
	* www.gnome.org/projects/gdm/screenshots.html,
	  www.gnome.org/projects/gdm/images/Makefile.am,
	  www.gnome.org/projects/gdm/images/*.png: Removed screenshots
	  since they are now so old.
	* www.gnome.org/projects/gdm/docs/2.20/*: Updated 2.20 docs
	* configure.in, www.gnome.org/projects/gdm/docs/2.24/*: Added 2.24 docs

2008-12-02  daniel g. siegel <dgsiegel@gmail.com>

	* projects.gnome.org/cheese/download.html,
	  projects.gnome.org/cheese/index.html: 
	  populate the cheese 2.25.2 release

2008-11-26  Vincent Untz  <vuntz@gnome.org>

	* www.gnome.org/index.wml: fix date for Gran Canaria Desktop Summit

2008-11-25  daniel g. siegel <dgsiegel@gmail.com>

	* projects.gnome.org/cheese/download.html,
	  projects.gnome.org/cheese/index.html: 
	  populate the cheese 2.24.2 release

2008-11-24  Dodji Seketeli  <dodji@gnome.org>

	* projects.gnome.org/nemiver/index.html: Updated for 0.6.4 release.

2008-11-20  Murray Cumming  <murrayc@murrayc.com>

	* include/convwml:
	* include/www.gnome.org/submenus.wml:
	* include/www.gnome.org/devtools-navbar.wml:
	* include/www.gnome.org/menus.wml:
	* include/www.gnome.org/header.wml:
	* include/www.gnome.org/devtools-page.wml:
	* include/www.gnome.org/fonts.wml:
	* include/www.gnome.org/page.wml:
	* include/www.gnome.org/footer.wml:
	* include/www.gnome.org/utils.wml:
	Deleted these because they do not seem to be used by anything.
	I believe that include/evilsedhack is the only thing used to create 
	.html files from .wml files.
