@@ -140,6 +140,19 @@
         <div id="bottomRight">
           <h2>News</h2>
 
+          <h3>December 16th 2008</h3>
+          <p>
+          <b>Unstable</b>
+          version 2.25.3 was released!
+          New in this release
+          </p>
+          <ul>
+            <li>achieved GnomeGoal <a href="http://live.gnome.org/GnomeGoals/CleanupGTKIncludes">http://live.gnome.org/GnomeGoals/CleanupGTKIncludes</a></li>
+            <li>added/updated translations</li>
+          </ul>
+          <a href="download">Download it</a>
+          (<a href="http://mail.gnome.org/archives/gnome-announce-list/2008-December/msg00047.html">full release notes</a>)
+
           <h3>December 1st 2008</h3>
           <p>
           <b>Unstable</b>
