@@ -1,3 +1,9 @@
+2008-12-16  daniel g. siegel <dgsiegel@gmail.com>
+
+	* projects.gnome.org/cheese/download.html,
+	  projects.gnome.org/cheese/index.html: 
+	  populate the cheese 2.25.3 release
+
 2008-12-10  Brian Cameron  <brian.cameron@sun.com>
 
 	* configure.in, www.gnome.org/projects/gdm/docs.html
